<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">

    <ImageButton
        android:id="@+id/smallHourGlass"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_marginStart="12dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        app:srcCompat="@mipmap/hourglass_foreground"
        />

    <ImageButton
        android:id="@+id/mediumHourGlass"
        android:layout_width="100dp"
        android:layout_height="160dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/smallHourGlass"
        android:background="@android:color/transparent"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:srcCompat="@mipmap/hourglass_foreground" />



    <ImageButton
        android:id="@+id/largeHourGlass"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="296dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/mediumHourGlass"
        app:srcCompat="@mipmap/hourglass_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="123dp"
        android:layout_height="103dp"
        android:layout_marginStart="20dp"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_above="@+id/textView3"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="123dp"
        android:layout_height="103dp"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_above="@id/textView4"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginStart="100dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/smallHourGlass"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/start"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/smallHourGlass"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        android:layout_toEndOf="@+id/textView3"
        android:gravity="center"
        android:text="@string/end"
        android:textSize="30sp" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_below="@id/mediumHourGlass"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:text="@string/check"
        android:textSize="30sp" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_below="@+id/smallHourGlass"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/retry"
        android:textSize="30sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_below="@id/smallHourGlass"
        android:layout_marginStart="220dp"
        android:layout_marginTop="61dp"
        android:text="@string/next"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/smallWrongImage"
        android:visibility="invisible"
        android:layout_width="96dp"
        android:layout_height="95dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/mediumWrongImage"
        android:layout_width="96dp"
        android:visibility="invisible"
        android:layout_height="95dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="148dp"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/largeWrongImage"
        android:visibility="invisible"
        android:layout_width="96dp"
        android:layout_height="95dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="268dp"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/smallCorrectImage"
        android:layout_width="96dp"
        android:layout_height="95dp"
        android:visibility="invisible"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"
        android:background="@android:color/transparent"
        app:srcCompat="@mipmap/checkmark_foreground" />

    <ImageView
        android:id="@+id/mediumCorrectImage"
        android:layout_width="96dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="150dp"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:srcCompat="@mipmap/checkmark_foreground" />

    <ImageView
        android:id="@+id/largeCorrectImage"
        android:layout_width="96dp"
        android:layout_height="95dp"
        android:visibility="invisible"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="272dp"
        android:background="@android:color/transparent"
        app:srcCompat="@mipmap/checkmark_foreground" />

</RelativeLayout>